@@ -19,7 +19,8 @@ pipeline {
 
         stage('Clean and Package') {
             steps {
-                sh 'mvn clean install -DskipTests=true'
+                sh 'mvn clean install -DskipTests=true -DargLine="--add-opens java.base/java.lang=ALL-UNNAMED" '
+'
             }
         }
 
